An attempt to fix the past still displaying

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 updateDate();
 
 </script>
-<div class="past-super">
+<!-- <div class="past-super">
   <div class="arrows">
 <button id="left-arrow" class="arrow" type="button" name="button" onclick="changePast(-1)">&larr;</button>
 <button id = "right-arrow" class="arrow" type="button" name="button" onclick="changePast(1)">&rarr;</button>
@@ -33,7 +33,7 @@ updateDate();
     <p id="past-amount"></p>
       </div>
   </div>
-</div>
+</div> -->
 
 <div class="selection-area">
 
