Adding test button to understand why the elements change size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 updateDate();
 
 </script>
-<!-- <div class="past-super">
+<div class="past-super">
   <div class="arrows">
 <button id="left-arrow" class="arrow" type="button" name="button" onclick="changePast(-1)">&larr;</button>
 <button id = "right-arrow" class="arrow" type="button" name="button" onclick="changePast(1)">&rarr;</button>
@@ -33,7 +33,7 @@ updateDate();
     <p id="past-amount"></p>
       </div>
   </div>
-</div> -->
+</div>
 
 <div class="selection-area">
 
@@ -74,9 +74,10 @@ updateDate();
 
 
   </datalist> -->
-  <button id="+button" class="amount-button" type="button" name="button" onclick="changeAmount(0.2)">+</button>
+  <button  class="amount-button" type="button" name="button" onclick="changeAmount(0.2)">+</button>
   <p id="amount">2.0</p>
-  <button id="-button"  class="amount-button" type="button" name="button" onclick="changeAmount(-0.2)">-</button>
+  <button type="button" name="button">Test</button>
+  <button   class="amount-button" type="button" name="button" onclick="changeAmount(-0.2)">-</button>
 </div>
 </div>
 <button id="take-button" type="button" name="button" onclick="buttonTake()">Take</button>
