--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@ updateDate();
 
 
   </datalist> -->
-  <button  class="amount-button" type="button" name="button" onclick="changeAmount(0.2)">+</button>
+  <button  class="amount-button" type="button" name="button" >a</button>
   <p id="amount">2.0</p>
   <button type="button" name="button">Test2</button>
-  <button   class="amount-button" type="button" name="button" onclick="changeAmount(-0.2)">-</button>
+  <button   class="amount-button" type="button" name="button" >b</button>
 </div>
 </div>
 <button id="take-button" type="button" name="button" onclick="buttonTake()">Take</button>
