--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ updateDate();
   </datalist> -->
   <button  class="amount-button" type="button" name="button" onclick="changeAmount(0.2)">a2</button>
   <p id="amount">2.0</p>
-  <button type="button" name="button">Test2</button>
+  <button type="button" name="button">tEST</button>
   <button   class="amount-button" type="button" name="button" onclick="changeAmount(-0.2)">b2</button>
 </div>
 </div>
